[metadata]
name = fshd
version = 1.2.4
description = A Python wrapper for FreeSurfaceHydrodynamics
url = https://github.com/hamilton8415/FreeSurfaceHydrodynamics
author = Andrew Hamilton
maintainer = Michael Anderson
author_email = hamilton@mbari.org
maintainer_email = anderson@mbari.org
license = Apache 2.0

[options]
packages =
    fshd
    fshd.examples
    fshd.examples.example_hydrodynamic_coeffs
install_requires =
    numpy
    scipy
zip_safe = True
include_package_data = True

[options.entry_points]
console_scripts =
    fshd_motion_example = fshd.examples.motion:main
    fshd_incidentwave_example = fshd.examples.incidentwave:main
    fshd_excitingforce_example = fshd.examples.excitingforce:main

[options.package_data]
fshd = *.so
fshd.examples.example_hydrodynamic_coeffs =
    BuoyA5.1
    BuoyA5.3
    BuoyA5_IR.1
    BuoyA5_JR.3
    BuoyA5_pan.dat
* = README.md
